# Nota

./: .gitignore  Cargo.toml  LICENSE  build.rs  com.nota.Nota.yml  installer.nsi  resource.rc
locales/: en.json  fi.json
notaupdater/: Cargo.toml
notaupdater/src/: main.rs
src/: app.rs  data.rs  lang.rs  main.rs  settings.rs  storage.rs  toast.rs  updater.rs
