[workspace]
members  = [".", "notaupdater"]
resolver = "2"

[package]
name = "Nota"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.3"
egui = "0.34.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
dirs = "6.0.0"
rfd = "0.17.2"
open = "5"
image      = { version = "0.25", features = ["png"] }
reqwest    = { version = "0.13.4", features = ["blocking", "json"] }
semver     = "1"

[build-dependencies]
embed-resource = "3.0.9"